--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     tailwind.config = {
       theme: {
         extend: {
-          colors: { 'whis-dark': '#0f172a', 'whis-blue': '#3b82f6' },
+          colors: { 'whis-dark': '#020617', 'whis-blue': '#3b82f6' },
           fontFamily: { sans: ['Inter', 'sans-serif'] }
         }
       }
@@ -18,9 +18,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <style>
-    body { background-color: #0f172a; color: white; }
-    .glass-nav { background: rgba(15, 23, 42, 0.7); backdrop-filter: blur(20px); border-bottom: 1px solid rgba(255,255,255,0.05); }
-    .glass-card { background: rgba(255, 255, 255, 0.03); border: 1px solid rgba(255, 255, 255, 0.05); backdrop-filter: blur(10px); }
+    body { background-color: #020617; color: white; }
+    .glass-nav { background: rgba(2, 6, 23, 0.8); backdrop-filter: blur(20px); border-bottom: 1px solid rgba(255,255,255,0.05); }
+    .glass-card { background: rgba(255, 255, 255, 0.02); border: 1px solid rgba(255, 255, 255, 0.05); backdrop-filter: blur(10px); }
   </style>
 </head>
 <body class="antialiased font-sans flex flex-col min-h-screen">
@@ -38,21 +38,33 @@
     </div>
   </nav>
 
-  <section class="flex-grow flex items-center justify-center pt-20 px-6">
-      <div class="max-w-2xl w-full text-center">
-          <div class="inline-block p-4 rounded-full bg-blue-500/10 mb-6"><i class="fa-regular fa-paper-plane text-3xl text-blue-400"></i></div>
-          <h1 class="text-4xl font-bold mb-4">Contact Support</h1>
-          <p class="text-slate-400 mb-10 text-lg">Need help with your account or have a technical question? <br>Our engineering team is ready to assist.</p>
-          
-          <div class="glass-card rounded-2xl p-8 md:p-12 mb-10">
-              <h2 class="text-xl font-semibold mb-2">Email Us Directly</h2>
-              <a href="mailto:support@whis-ai.com" class="text-3xl md:text-4xl font-bold text-blue-400 hover:text-blue-300 transition">support@whis-ai.com</a>
-              <p class="text-sm text-slate-500 mt-4">Typical response time: &lt; 24 hours</p>
+  <section class="flex-grow flex flex-col items-center justify-center pt-32 pb-20 px-6">
+      <div class="max-w-4xl w-full">
+          <div class="text-center mb-16">
+            <h1 class="text-4xl md:text-5xl font-bold mb-4">How can we help?</h1>
+            <p class="text-slate-400 text-lg">Our engineering and support teams are distributed globally to serve you 24/7.</p>
           </div>
 
-          <div class="text-sm text-slate-500">
-              <p class="mb-2">Operating Entity:</p>
-              <p class="font-semibold text-slate-300 uppercase tracking-wide">WASEEM FAHAD SYED</p>
+          <div class="grid md:grid-cols-2 gap-8">
+              <div class="glass-card p-10 rounded-3xl hover:bg-white/5 transition">
+                  <div class="w-12 h-12 rounded-xl bg-blue-500/10 flex items-center justify-center mb-6"><i class="fa-solid fa-code text-2xl text-blue-400"></i></div>
+                  <h2 class="text-2xl font-bold mb-2">Technical Support</h2>
+                  <p class="text-slate-400 text-sm mb-6">For account issues, bug reports, or installation help.</p>
+                  <a href="mailto:support@whis-ai.com" class="text-blue-400 font-bold hover:text-blue-300 flex items-center gap-2">support@whis-ai.com <i class="fa-solid fa-arrow-right"></i></a>
+              </div>
+
+              <div class="glass-card p-10 rounded-3xl hover:bg-white/5 transition">
+                  <div class="w-12 h-12 rounded-xl bg-purple-500/10 flex items-center justify-center mb-6"><i class="fa-solid fa-building-shield text-2xl text-purple-400"></i></div>
+                  <h2 class="text-2xl font-bold mb-2">Enterprise Sales</h2>
+                  <p class="text-slate-400 text-sm mb-6">For team licenses, SOC2 reports, and custom invoicing.</p>
+                  <a href="mailto:sales@whis-ai.com" class="text-purple-400 font-bold hover:text-purple-300 flex items-center gap-2">sales@whis-ai.com <i class="fa-solid fa-arrow-right"></i></a>
+              </div>
+          </div>
+          
+          <div class="mt-16 pt-8 border-t border-white/5 text-center">
+              <p class="text-xs text-slate-500 uppercase tracking-widest mb-2">Legal Entity & Operations</p>
+              <p class="text-lg font-bold text-white">WASEEM FAHAD SYED</p>
+              <p class="text-slate-500 text-sm mt-1">Hyderabad, India</p>
           </div>
       </div>
   </section>
