--- a/contact.html
+++ b/contact.html
@@ -3,75 +3,41 @@
 <head>
   <meta charset="UTF-8" />
   <title>Contact - whis.ai</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: { 'whis-dark': '#020617', 'whis-blue': '#3b82f6' },
-          fontFamily: { sans: ['Inter', 'sans-serif'] }
-        }
-      }
-    }
-  </script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <script>tailwind.config={darkMode:'class',theme:{extend:{colors:{'bg-main':'#000'},fontFamily:{sans:['Inter','sans-serif']}}}}</script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <style>
-    body { background-color: #020617; color: white; }
-    .glass-nav { background: rgba(2, 6, 23, 0.8); backdrop-filter: blur(20px); border-bottom: 1px solid rgba(255,255,255,0.05); }
-    .glass-card { background: rgba(255, 255, 255, 0.02); border: 1px solid rgba(255, 255, 255, 0.05); backdrop-filter: blur(10px); }
-  </style>
+  <style>body{background:#000;color:white;}</style>
 </head>
-<body class="antialiased font-sans flex flex-col min-h-screen">
-
-  <nav class="fixed top-0 w-full z-50 glass-nav">
-    <div class="max-w-7xl mx-auto px-6 h-20 flex items-center justify-between">
-      <a href="index.html" class="flex items-center gap-3">
-        <div class="w-8 h-8 rounded-lg bg-gradient-to-br from-blue-600 to-indigo-600 flex items-center justify-center shadow-lg"><span class="text-[10px] font-bold text-white tracking-widest">WH</span></div>
-        <span class="text-lg font-bold tracking-tight">whis.ai</span>
-      </a>
-      <div class="flex items-center gap-8 text-sm font-medium text-slate-300">
-         <a href="index.html" class="hover:text-white transition">Home</a>
-         <a href="pricing.html" class="hover:text-white transition">Pricing</a>
-      </div>
-    </div>
+<body class="antialiased font-sans min-h-screen flex flex-col">
+  <nav class="w-full py-6 px-6 flex justify-between items-center max-w-7xl mx-auto">
+      <a href="index.html" class="font-bold text-xl">whis.ai</a>
   </nav>
 
-  <section class="flex-grow flex flex-col items-center justify-center pt-32 pb-20 px-6">
-      <div class="max-w-4xl w-full">
-          <div class="text-center mb-16">
-            <h1 class="text-4xl md:text-5xl font-bold mb-4">How can we help?</h1>
-            <p class="text-slate-400 text-lg">Our engineering and support teams are distributed globally to serve you 24/7.</p>
+  <section class="flex-grow flex items-center justify-center px-6">
+      <div class="w-full max-w-4xl text-center">
+          <h1 class="text-4xl font-bold mb-4">Contact Support</h1>
+          <p class="text-gray-500 mb-12">We usually respond within 2 hours.</p>
+
+          <div class="grid md:grid-cols-2 gap-6 mb-16">
+              <a href="mailto:support@whis-ai.com" class="block p-8 rounded-2xl border border-white/10 hover:border-blue-500/50 bg-white/5 transition group text-left">
+                  <i class="fa-solid fa-life-ring text-2xl text-blue-500 mb-4"></i>
+                  <h3 class="text-xl font-bold mb-2">Technical Support</h3>
+                  <p class="text-gray-500 text-sm mb-4">Bugs, installation issues, and account help.</p>
+                  <span class="text-blue-400 font-bold text-sm group-hover:underline">support@whis-ai.com &rarr;</span>
+              </a>
+              <a href="mailto:sales@whis-ai.com" class="block p-8 rounded-2xl border border-white/10 hover:border-purple-500/50 bg-white/5 transition group text-left">
+                  <i class="fa-solid fa-briefcase text-2xl text-purple-500 mb-4"></i>
+                  <h3 class="text-xl font-bold mb-2">Enterprise Sales</h3>
+                  <p class="text-gray-500 text-sm mb-4">Bulk licenses and custom invoicing.</p>
+                  <span class="text-purple-400 font-bold text-sm group-hover:underline">sales@whis-ai.com &rarr;</span>
+              </a>
           </div>
 
-          <div class="grid md:grid-cols-2 gap-8">
-              <div class="glass-card p-10 rounded-3xl hover:bg-white/5 transition">
-                  <div class="w-12 h-12 rounded-xl bg-blue-500/10 flex items-center justify-center mb-6"><i class="fa-solid fa-code text-2xl text-blue-400"></i></div>
-                  <h2 class="text-2xl font-bold mb-2">Technical Support</h2>
-                  <p class="text-slate-400 text-sm mb-6">For account issues, bug reports, or installation help.</p>
-                  <a href="mailto:support@whis-ai.com" class="text-blue-400 font-bold hover:text-blue-300 flex items-center gap-2">support@whis-ai.com <i class="fa-solid fa-arrow-right"></i></a>
-              </div>
-
-              <div class="glass-card p-10 rounded-3xl hover:bg-white/5 transition">
-                  <div class="w-12 h-12 rounded-xl bg-purple-500/10 flex items-center justify-center mb-6"><i class="fa-solid fa-building-shield text-2xl text-purple-400"></i></div>
-                  <h2 class="text-2xl font-bold mb-2">Enterprise Sales</h2>
-                  <p class="text-slate-400 text-sm mb-6">For team licenses, SOC2 reports, and custom invoicing.</p>
-                  <a href="mailto:sales@whis-ai.com" class="text-purple-400 font-bold hover:text-purple-300 flex items-center gap-2">sales@whis-ai.com <i class="fa-solid fa-arrow-right"></i></a>
-              </div>
-          </div>
-          
-          <div class="mt-16 pt-8 border-t border-white/5 text-center">
-              <p class="text-xs text-slate-500 uppercase tracking-widest mb-2">Legal Entity & Operations</p>
-              <p class="text-lg font-bold text-white">WASEEM FAHAD SYED</p>
-              <p class="text-slate-500 text-sm mt-1">Hyderabad, India</p>
+          <div class="text-center border-t border-white/10 pt-8">
+              <p class="text-xs text-gray-600 uppercase tracking-widest mb-2">Operating Entity</p>
+              <p class="font-bold text-white">WASEEM FAHAD SYED</p>
           </div>
       </div>
   </section>
-
-  <footer class="py-8 text-center text-slate-600 text-sm border-t border-white/5">
-    &copy; 2025 Whis AI. All rights reserved.
-  </footer>
-
 </body>
 </html>
