--- a/contact.html
+++ b/contact.html
@@ -4,40 +4,33 @@
   <meta charset="UTF-8" />
   <title>Contact - whis.ai</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>tailwind.config={darkMode:'class',theme:{extend:{colors:{'bg-main':'#000'},fontFamily:{sans:['Inter','sans-serif']}}}}</script>
+  <script>tailwind.config={theme:{extend:{colors:{'whis-bg':'#f8fafc','whis-dark':'#0f172a'}}}}</script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <style>body{background:#000;color:white;}</style>
+  <style>.glass-nav { background: rgba(15, 23, 42, 0.7); backdrop-filter: blur(12px); }</style>
 </head>
-<body class="antialiased font-sans min-h-screen flex flex-col">
-  <nav class="w-full py-6 px-6 flex justify-between items-center max-w-7xl mx-auto">
-      <a href="index.html" class="font-bold text-xl">whis.ai</a>
-  </nav>
-
-  <section class="flex-grow flex items-center justify-center px-6">
-      <div class="w-full max-w-4xl text-center">
-          <h1 class="text-4xl font-bold mb-4">Contact Support</h1>
-          <p class="text-gray-500 mb-12">We usually respond within 2 hours.</p>
-
-          <div class="grid md:grid-cols-2 gap-6 mb-16">
-              <a href="mailto:support@whis-ai.com" class="block p-8 rounded-2xl border border-white/10 hover:border-blue-500/50 bg-white/5 transition group text-left">
-                  <i class="fa-solid fa-life-ring text-2xl text-blue-500 mb-4"></i>
-                  <h3 class="text-xl font-bold mb-2">Technical Support</h3>
-                  <p class="text-gray-500 text-sm mb-4">Bugs, installation issues, and account help.</p>
-                  <span class="text-blue-400 font-bold text-sm group-hover:underline">support@whis-ai.com &rarr;</span>
-              </a>
-              <a href="mailto:sales@whis-ai.com" class="block p-8 rounded-2xl border border-white/10 hover:border-purple-500/50 bg-white/5 transition group text-left">
-                  <i class="fa-solid fa-briefcase text-2xl text-purple-500 mb-4"></i>
-                  <h3 class="text-xl font-bold mb-2">Enterprise Sales</h3>
-                  <p class="text-gray-500 text-sm mb-4">Bulk licenses and custom invoicing.</p>
-                  <span class="text-purple-400 font-bold text-sm group-hover:underline">sales@whis-ai.com &rarr;</span>
-              </a>
-          </div>
-
-          <div class="text-center border-t border-white/10 pt-8">
-              <p class="text-xs text-gray-600 uppercase tracking-widest mb-2">Operating Entity</p>
-              <p class="font-bold text-white">WASEEM FAHAD SYED</p>
+<body class="bg-whis-bg text-slate-900 antialiased font-sans">
+  <nav class="fixed top-0 w-full z-50 glass-nav border-b border-white/10">
+      <div class="max-w-7xl mx-auto px-6 h-20 flex items-center justify-between">
+          <a href="index.html" class="flex items-center gap-2 group"><span class="text-xl font-bold text-white">whis.ai</span></a>
+          <div class="hidden md:flex items-center gap-8 text-sm font-medium text-slate-300">
+             <a href="index.html" class="hover:text-white">Home</a>
+             <a href="pricing.html" class="hover:text-white">Pricing</a>
           </div>
       </div>
+  </nav>
+  <section class="bg-whis-dark text-white pt-40 pb-16 px-6 text-center">
+      <h1 class="text-4xl font-bold mb-4">Contact Us</h1>
+      <p class="text-slate-400">We're here to help.</p>
   </section>
+  <section class="max-w-3xl mx-auto py-16 px-6">
+      <div class="bg-white rounded-3xl p-8 shadow-sm border border-slate-200">
+          <form class="space-y-6">
+              <div><label class="block text-sm font-bold mb-2">Email</label><input type="email" class="w-full p-3 rounded-xl border border-slate-200 bg-slate-50" placeholder="you@company.com"></div>
+              <div><label class="block text-sm font-bold mb-2">Message</label><textarea class="w-full p-3 rounded-xl border border-slate-200 bg-slate-50 h-32"></textarea></div>
+              <button class="bg-slate-900 text-white px-6 py-3 rounded-xl font-bold w-full">Send Message</button>
+          </form>
+      </div>
+  </section>
+  <footer class="bg-slate-900 text-slate-400 py-12 text-center border-t border-slate-800">&copy; 2025 Whis AI.</footer>
 </body>
 </html>
