--- a/support.html
+++ b/support.html
@@ -5,41 +5,27 @@
   <title>Support – Whis</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          fontFamily: { sans: ['Inter', 'sans-serif'] },
-          colors: { 'whis-dark': '#030712' }
-        }
-      }
-    }
-  </script>
+  <script>tailwind.config={theme:{extend:{fontFamily:{sans:['Inter','sans-serif']},colors:{'whis-dark':'#020408'}}}}</script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <style>body { background-color: #030712; color: white; font-family: 'Inter', sans-serif; }</style>
+  <style>body{background-color:#020408;color:white;font-family:'Inter',sans-serif;}</style>
 </head>
 <body class="antialiased min-h-screen flex flex-col">
   
-  <nav class="w-full h-20 flex items-center justify-between px-6 md:px-12 border-b border-white/5 bg-[#030712]/50 backdrop-blur-md sticky top-0">
-     <a href="/" class="flex items-center gap-2 font-bold text-lg"><div class="w-6 h-6 rounded bg-blue-600 flex items-center justify-center text-[10px]">WH</div> whis.ai</a>
+  <nav class="w-full h-20 flex items-center justify-between px-6 md:px-12 border-b border-white/5 bg-[#020408]/80 backdrop-blur-md sticky top-0">
+     <a href="/" class="flex items-center gap-2 font-bold text-lg"><div class="w-6 h-6 rounded bg-indigo-600 flex items-center justify-center text-[10px]">WH</div> whis.ai</a>
      <a href="/" class="text-sm text-slate-400 hover:text-white transition">Back to Home</a>
   </nav>
 
   <main class="flex-grow flex items-center justify-center p-6">
       <div class="max-w-md w-full text-center">
-          <div class="w-16 h-16 bg-gradient-to-br from-blue-600/20 to-purple-600/20 rounded-2xl flex items-center justify-center mx-auto mb-8 text-blue-400 text-2xl border border-white/5 shadow-2xl">
-              <i class="fa-solid fa-headset"></i>
-          </div>
-          
+          <div class="w-16 h-16 bg-gradient-to-br from-indigo-500/20 to-purple-500/20 rounded-2xl flex items-center justify-center mx-auto mb-8 text-indigo-400 text-2xl border border-white/5 shadow-2xl"><i class="fa-solid fa-headset"></i></div>
           <h1 class="text-3xl font-bold mb-3">Priority Support</h1>
           <p class="text-slate-400 mb-10">Our engineering team responds to all queries within 24 hours.</p>
-          
-          <div class="bg-[#0f131f] border border-white/10 rounded-2xl p-8 mb-10 shadow-lg hover:border-blue-500/30 transition">
+          <div class="bg-[#0f131f] border border-white/10 rounded-2xl p-8 mb-10 shadow-lg hover:border-indigo-500/30 transition">
               <p class="text-xs text-slate-500 mb-2 uppercase tracking-widest font-bold">Direct Email</p>
-              <a href="mailto:support@whis-ai.com" class="text-xl font-bold text-white hover:text-blue-400 transition">support@whis-ai.com</a>
+              <a href="mailto:support@whis-ai.com" class="text-xl font-bold text-white hover:text-indigo-400 transition">support@whis-ai.com</a>
           </div>
-
           <div class="text-xs text-slate-600 border-t border-white/5 pt-8">
               <div class="inline-block px-3 py-1 bg-white/5 rounded-md mb-4 border border-white/5">Merchant Details</div>
               <p class="mb-1 font-bold text-slate-500">Legal Business Name</p>
@@ -48,9 +34,6 @@
           </div>
       </div>
   </main>
-
-  <footer class="py-8 text-center text-xs text-slate-700 border-t border-white/5">
-      &copy; 2025 Whis AI Inc. All rights reserved.
-  </footer>
+  <footer class="py-8 text-center text-xs text-slate-700 border-t border-white/5">&copy; 2025 Whis AI Inc. All rights reserved.</footer>
 </body>
 </html>
