--- a/support.html
+++ b/support.html
@@ -5,35 +5,36 @@
   <title>Support – Whis</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>tailwind.config={theme:{extend:{fontFamily:{sans:['Inter','sans-serif']},colors:{'whis-dark':'#020408'}}}}</script>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <script>tailwind.config={theme:{extend:{fontFamily:{sans:['Inter','sans-serif']},colors:{page:'#050505',card:'#0A0A0A'}}}}; </script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <style>body{background-color:#020408;color:white;font-family:'Inter',sans-serif;}</style>
+  <style>body{background-color:#050505;color:white;font-family:'Inter',sans-serif;}</style>
 </head>
 <body class="antialiased min-h-screen flex flex-col">
   
-  <nav class="w-full h-20 flex items-center justify-between px-6 md:px-12 border-b border-white/5 bg-[#020408]/80 backdrop-blur-md sticky top-0">
-     <a href="/" class="flex items-center gap-2 font-bold text-lg"><div class="w-6 h-6 rounded bg-indigo-600 flex items-center justify-center text-[10px]">WH</div> whis.ai</a>
-     <a href="/" class="text-sm text-slate-400 hover:text-white transition">Back to Home</a>
+  <nav class="w-full h-[70px] flex items-center justify-between px-6 border-b border-white/5 bg-page/80 backdrop-blur-md sticky top-0">
+     <a href="/" class="flex items-center gap-2"><div class="w-8 h-8 rounded-lg bg-white/10 flex items-center justify-center border border-white/5"><span class="text-xs font-bold">WH</span></div><span class="text-sm font-semibold text-slate-300">whis.ai</span></a>
+     <a href="/" class="text-xs text-slate-500 hover:text-white transition">Back to Home</a>
   </nav>
 
   <main class="flex-grow flex items-center justify-center p-6">
       <div class="max-w-md w-full text-center">
-          <div class="w-16 h-16 bg-gradient-to-br from-indigo-500/20 to-purple-500/20 rounded-2xl flex items-center justify-center mx-auto mb-8 text-indigo-400 text-2xl border border-white/5 shadow-2xl"><i class="fa-solid fa-headset"></i></div>
-          <h1 class="text-3xl font-bold mb-3">Priority Support</h1>
-          <p class="text-slate-400 mb-10">Our engineering team responds to all queries within 24 hours.</p>
-          <div class="bg-[#0f131f] border border-white/10 rounded-2xl p-8 mb-10 shadow-lg hover:border-indigo-500/30 transition">
-              <p class="text-xs text-slate-500 mb-2 uppercase tracking-widest font-bold">Direct Email</p>
-              <a href="mailto:support@whis-ai.com" class="text-xl font-bold text-white hover:text-indigo-400 transition">support@whis-ai.com</a>
+          <div class="w-16 h-16 bg-gradient-to-br from-blue-500/10 to-purple-500/10 rounded-2xl flex items-center justify-center mx-auto mb-8 text-blue-400 text-2xl border border-white/5"><i class="fa-solid fa-life-ring"></i></div>
+          <h1 class="text-3xl font-medium mb-3 text-white">Priority Support</h1>
+          <p class="text-slate-400 mb-10 text-sm font-light">We respond to all technical queries within 24 hours.</p>
+          
+          <div class="bg-card border border-white/10 rounded-xl p-8 mb-8 hover:border-blue-500/30 transition duration-300">
+              <p class="text-[10px] text-slate-500 mb-2 uppercase tracking-widest font-bold">Email Us</p>
+              <a href="mailto:support@whis-ai.com" class="text-xl font-medium text-white hover:text-blue-400 transition">support@whis-ai.com</a>
           </div>
-          <div class="text-xs text-slate-600 border-t border-white/5 pt-8">
-              <div class="inline-block px-3 py-1 bg-white/5 rounded-md mb-4 border border-white/5">Merchant Details</div>
-              <p class="mb-1 font-bold text-slate-500">Legal Business Name</p>
-              <p class="uppercase tracking-widest text-slate-400 font-semibold">WASEEM FAHAD SYED</p>
-              <p class="mt-2 text-slate-700">Hyderabad, India</p>
+
+          <div class="text-xs text-slate-600 border-t border-white/5 pt-8 text-left">
+              <p class="mb-4 text-center text-slate-500">Merchant Information</p>
+              <div class="flex justify-between mb-2"><span>Legal Name</span><span class="text-slate-400">WASEEM FAHAD SYED</span></div>
+              <div class="flex justify-between"><span>Location</span><span class="text-slate-400">Hyderabad, India</span></div>
           </div>
       </div>
   </main>
-  <footer class="py-8 text-center text-xs text-slate-700 border-t border-white/5">&copy; 2025 Whis AI Inc. All rights reserved.</footer>
+  <footer class="py-8 text-center text-[10px] text-slate-700 border-t border-white/5">&copy; 2025 Whis AI Inc. All rights reserved.</footer>
 </body>
 </html>
