--- a/contact.html
+++ b/contact.html
@@ -2,35 +2,81 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Contact - whis.ai</title>
+  <title>Contact Us – Whis</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>tailwind.config={theme:{extend:{colors:{'whis-bg':'#f8fafc','whis-dark':'#0f172a'}}}}</script>
+  <script>tailwind.config={theme:{extend:{fontFamily:{sans:['Inter','sans-serif']},colors:{page:'#050505',card:'#0A0A0A'}}}}; </script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <style>.glass-nav { background: rgba(15, 23, 42, 0.7); backdrop-filter: blur(12px); }</style>
+  <style>body{background-color:#050505;color:white;font-family:'Inter',sans-serif;}</style>
 </head>
-<body class="bg-whis-bg text-slate-900 antialiased font-sans">
-  <nav class="fixed top-0 w-full z-50 glass-nav border-b border-white/10">
-      <div class="max-w-7xl mx-auto px-6 h-20 flex items-center justify-between">
-          <a href="index.html" class="flex items-center gap-2 group"><span class="text-xl font-bold text-white">whis.ai</span></a>
-          <div class="hidden md:flex items-center gap-8 text-sm font-medium text-slate-300">
-             <a href="index.html" class="hover:text-white">Home</a>
-             <a href="pricing.html" class="hover:text-white">Pricing</a>
+<body class="antialiased min-h-screen flex flex-col">
+  <nav class="w-full h-[70px] flex items-center justify-between px-6 border-b border-white/5 bg-page/80 backdrop-blur-md sticky top-0 z-50">
+     <a href="index.html" class="flex items-center gap-2"><div class="w-8 h-8 rounded-lg bg-white/10 flex items-center justify-center border border-white/5"><span class="text-xs font-bold">WH</span></div><span class="text-sm font-semibold text-slate-300">whis.ai</span></a>
+     <a href="index.html" class="text-xs text-slate-500 hover:text-white transition">Back to Home</a>
+  </nav>
+
+  <main class="flex-grow flex items-center justify-center p-6 pt-20">
+      <div class="max-w-4xl w-full grid md:grid-cols-2 gap-12">
+          <div>
+              <div class="w-12 h-12 bg-blue-500/10 rounded-xl flex items-center justify-center text-blue-400 text-xl border border-blue-500/20 mb-6"><i class="fa-solid fa-envelope"></i></div>
+              <h1 class="text-4xl font-medium mb-4 text-white">Contact Us</h1>
+              <p class="text-slate-400 mb-8 font-light leading-relaxed">Have questions about pricing, features, or enterprise plans? We are here to help.</p>
+              
+              <div class="space-y-6">
+                  <div class="flex items-start gap-4">
+                      <div class="mt-1 text-slate-500"><i class="fa-solid fa-location-dot"></i></div>
+                      <div>
+                          <h3 class="text-sm font-bold text-white mb-1">Registered Address</h3>
+                          <p class="text-sm text-slate-400">H.No 12-34/G, Manikonda<br>Hyderabad, Telangana, 500089<br>India</p>
+                      </div>
+                  </div>
+                  
+                  <div class="flex items-start gap-4">
+                      <div class="mt-1 text-slate-500"><i class="fa-solid fa-at"></i></div>
+                      <div>
+                          <h3 class="text-sm font-bold text-white mb-1">Email Support</h3>
+                          <a href="mailto:support@whis-ai.com" class="text-sm text-blue-400 hover:text-blue-300">support@whis-ai.com</a>
+                          <p class="text-xs text-slate-500 mt-1">Response time: Within 24 hours</p>
+                      </div>
+                  </div>
+              </div>
+
+              <div class="mt-12 pt-8 border-t border-white/5">
+                  <p class="text-[10px] text-slate-600 uppercase tracking-widest font-bold mb-2">Merchant Legal Details</p>
+                  <div class="flex gap-8 text-xs text-slate-500">
+                      <div><span class="block text-slate-700">Entity Name</span> WASEEM FAHAD SYED</div>
+                  </div>
+              </div>
+          </div>
+
+          <div class="bg-card border border-white/10 rounded-2xl p-8 shadow-xl">
+              <form class="space-y-5">
+                  <div>
+                      <label class="block text-xs font-bold text-slate-500 uppercase tracking-wide mb-2">Your Email</label>
+                      <input type="email" class="w-full bg-white/5 border border-white/10 rounded-lg p-3 text-white focus:outline-none focus:border-blue-500 transition" placeholder="john@example.com">
+                  </div>
+                  <div>
+                      <label class="block text-xs font-bold text-slate-500 uppercase tracking-wide mb-2">Subject</label>
+                      <select class="w-full bg-white/5 border border-white/10 rounded-lg p-3 text-white focus:outline-none focus:border-blue-500 transition">
+                          <option class="bg-card">Billing Issue</option>
+                          <option class="bg-card">Technical Support</option>
+                          <option class="bg-card">Enterprise Inquiry</option>
+                          <option class="bg-card">Other</option>
+                      </select>
+                  </div>
+                  <div>
+                      <label class="block text-xs font-bold text-slate-500 uppercase tracking-wide mb-2">Message</label>
+                      <textarea class="w-full bg-white/5 border border-white/10 rounded-lg p-3 text-white h-32 focus:outline-none focus:border-blue-500 transition" placeholder="How can we help?"></textarea>
+                  </div>
+                  <button type="button" class="w-full bg-white text-black font-bold py-3 rounded-lg hover:bg-slate-200 transition">Send Message</button>
+              </form>
           </div>
       </div>
-  </nav>
-  <section class="bg-whis-dark text-white pt-40 pb-16 px-6 text-center">
-      <h1 class="text-4xl font-bold mb-4">Contact Us</h1>
-      <p class="text-slate-400">We're here to help.</p>
-  </section>
-  <section class="max-w-3xl mx-auto py-16 px-6">
-      <div class="bg-white rounded-3xl p-8 shadow-sm border border-slate-200">
-          <form class="space-y-6">
-              <div><label class="block text-sm font-bold mb-2">Email</label><input type="email" class="w-full p-3 rounded-xl border border-slate-200 bg-slate-50" placeholder="you@company.com"></div>
-              <div><label class="block text-sm font-bold mb-2">Message</label><textarea class="w-full p-3 rounded-xl border border-slate-200 bg-slate-50 h-32"></textarea></div>
-              <button class="bg-slate-900 text-white px-6 py-3 rounded-xl font-bold w-full">Send Message</button>
-          </form>
-      </div>
-  </section>
-  <footer class="bg-slate-900 text-slate-400 py-12 text-center border-t border-slate-800">&copy; 2025 Whis AI.</footer>
+  </main>
+  
+  <footer class="py-8 text-center text-[10px] text-slate-700 border-t border-white/5 bg-page">
+      &copy; 2025 Whis AI. All rights reserved.
+  </footer>
 </body>
 </html>
