--- a/index.html
+++ b/index.html
@@ -215,7 +215,21 @@
       </div>
   </section>
 
-  <footer class="border-t border-white/5 py-12 bg-page"><div class="max-w-7xl mx-auto px-6 flex justify-between items-center"><span class="text-xs text-slate-600">&copy; 2025 Whis AI.</span><div class="flex gap-6 text-xs text-slate-500"><a href="pricing.html" class="hover:text-white">Pricing</a><a href="support.html" class="hover:text-white">Legal</a></div></div></footer>
+  <footer class="border-t border-white/5 py-12 bg-page">
+      <div class="max-w-7xl mx-auto px-6">
+          <div class="flex flex-col md:flex-row justify-between items-center gap-6">
+              <div class="text-xs text-slate-600">&copy; 2025 Whis AI.</div>
+              <div class="flex flex-wrap gap-6 text-xs text-slate-500 justify-center">
+                  <a href="pricing.html" class="hover:text-white transition">Pricing</a>
+                  <a href="contact.html" class="hover:text-white transition">Contact Us</a>
+                  <a href="terms.html" class="hover:text-white transition">Terms & Conditions</a>
+                  <a href="privacy.html" class="hover:text-white transition">Privacy Policy</a>
+                  <a href="refund-policy.html" class="hover:text-white transition">Refunds</a>
+                  <a href="shipping-policy.html" class="hover:text-white transition">Delivery Policy</a>
+              </div>
+          </div>
+      </div>
+  </footer>
 
   <div id="profileModal" class="fixed inset-0 bg-black/80 backdrop-blur-xl z-[100] hidden items-center justify-center p-4">
     <div class="bg-[#0A0A0A] border border-white/10 rounded-xl w-full max-w-md overflow-hidden relative shadow-2xl">
