--- a/privacy.html
+++ b/privacy.html
@@ -5,52 +5,70 @@
   <title>Privacy Policy – Whis</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: { sans: ['Inter', 'system-ui', 'sans-serif'] },
+          colors: { page: '#050505', card: '#0A0A0A', stroke: '#1F1F1F' }
+        }
+      }
+    }
+  </script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
   <style>
-    body { background-color: #050505; color: #cbd5e1; font-family: 'Inter', sans-serif; }
-    h1, h2, h3 { color: white; font-weight: 600; margin-top: 2rem; margin-bottom: 1rem; }
-    p { margin-bottom: 1rem; line-height: 1.6; }
+    body { background-color: #050505; color: white; font-family: 'Inter', sans-serif; -webkit-font-smoothing: antialiased; }
     .glass-nav { background: rgba(5, 5, 5, 0.7); backdrop-filter: blur(16px); border-bottom: 1px solid rgba(255,255,255,0.05); }
+    h2 { color: white; font-weight: 600; font-size: 1.25rem; margin-top: 2.5rem; margin-bottom: 1rem; letter-spacing: -0.01em; }
+    p, li { color: #94a3b8; font-weight: 300; line-height: 1.75; margin-bottom: 1rem; font-size: 0.95rem; }
+    strong { color: #e2e8f0; font-weight: 500; }
   </style>
 </head>
-<body>
+<body class="selection:bg-blue-500/30">
+
   <nav class="fixed top-0 w-full z-50 glass-nav h-[70px] flex items-center justify-center">
     <div class="w-full max-w-4xl px-6 flex items-center justify-between">
-      <a href="index.html" class="text-sm font-semibold text-white">whis.ai</a>
+      <a href="index.html" class="flex items-center gap-2">
+        <div class="w-6 h-6 rounded bg-white/10 flex items-center justify-center border border-white/5"><span class="text-[10px] font-bold text-white">WH</span></div>
+        <span class="text-sm font-semibold text-slate-300">whis.ai</span>
+      </a>
       <a href="index.html" class="text-xs text-slate-500 hover:text-white transition">Back to Home</a>
     </div>
   </nav>
 
-  <main class="pt-32 pb-20 px-6 max-w-4xl mx-auto">
-    <h1 class="text-4xl mb-2">Privacy Policy</h1>
-    <p class="text-xs text-slate-500 mb-10">Last updated: November 25, 2025</p>
+  <main class="pt-32 pb-20 px-6 max-w-3xl mx-auto">
+    <div class="mb-12 border-b border-white/5 pb-8">
+        <h1 class="text-4xl md:text-5xl font-medium mb-4 tracking-tight">Privacy Policy</h1>
+        <p class="text-slate-500 text-sm">Last updated: November 25, 2025</p>
+    </div>
 
-    <h2>1. Introduction</h2>
-    <p>Welcome to Whis ("we," "our," or "us"). We are committed to protecting your privacy and ensuring you understand how your information is used. This Privacy Policy explains how we collect, use, and share information when you use our desktop application and services.</p>
+    <div>
+        <p>Welcome to Whis ("we," "our," or "us"). We are committed to protecting your privacy and ensuring you understand how your information is used. This Privacy Policy explains how we collect, use, and share information when you use our desktop application and services.</p>
 
-    <h2>2. Information We Collect</h2>
-    <p><strong>Google User Data:</strong> We use Google OAuth for authentication. We collect your email address, name, and profile picture to create your user account.</p>
-    <p><strong>Audio & Visual Data:</strong> To provide our core service (transcription and assistance), the Application processes system audio and screen captures locally or via our secure cloud servers. This data is transient and is processed solely for the purpose of generating real-time responses.</p>
-    <p><strong>Payment Information:</strong> All payments are processed by third-party gateways (Razorpay/Cashfree). We do not store your full credit card details on our servers.</p>
+        <h2>1. Information We Collect</h2>
+        <ul class="list-disc pl-5 space-y-2 mb-6 text-slate-400 marker:text-slate-600">
+            <li><strong>Google User Data:</strong> We use Google OAuth for authentication. We collect your email address, name, and profile picture strictly to manage your user account.</li>
+            <li><strong>Audio & Visual Data:</strong> To provide our core service, the Application processes system audio and screen captures. This data is processed in real-time to generate responses and is not stored permanently on our servers.</li>
+            <li><strong>Payment Information:</strong> Payments are processed by third-party gateways (Razorpay/Cashfree). We do not store your full credit card details.</li>
+        </ul>
 
-    <h2>3. How We Use Your Information</h2>
-    <p>We use your information to:
-       <ul class="list-disc pl-5 space-y-2 mb-4">
-           <li>Authenticate your identity.</li>
-           <li>Provide the transcription and AI assistance features.</li>
-           <li>Process subscription payments.</li>
-           <li>Communicate strictly regarding service updates or support.</li>
-       </ul>
-    </p>
+        <h2>2. How We Use Your Information</h2>
+        <p>We use your information strictly to:</p>
+        <ul class="list-disc pl-5 space-y-2 mb-6 text-slate-400 marker:text-slate-600">
+           <li>Authenticate your identity and manage your subscription tier.</li>
+           <li>Provide the real-time transcription and AI assistance features.</li>
+           <li>Send transactional emails (invoices, password resets).</li>
+        </ul>
 
-    <h2>4. Data Security</h2>
-    <p>We implement industry-standard security measures to protect your data. Your audio and screen data are processed securely and are not used to train public AI models without your explicit consent.</p>
+        <h2>3. Data Security</h2>
+        <p>We implement industry-standard encryption (TLS/SSL) for data in transit. Your audio streams and screenshots are processed ephemerally. We do not use your personal meeting data to train public AI models without your explicit consent.</p>
 
-    <h2>5. Contact Us</h2>
-    <p>If you have questions about this Privacy Policy, please contact us at support@whis-ai.com.</p>
+        <h2>4. Contact Us</h2>
+        <p>If you have questions about this Privacy Policy, please contact us at <a href="mailto:support@whis-ai.com" class="text-blue-400 hover:text-blue-300">support@whis-ai.com</a>.</p>
+    </div>
   </main>
   
-  <footer class="border-t border-white/5 py-8 text-center text-xs text-slate-600">
+  <footer class="border-t border-white/5 py-12 text-center text-xs text-slate-600">
       &copy; 2025 Whis AI. All rights reserved.
   </footer>
 </body>
