--- a/terms.html
+++ b/terms.html
@@ -5,48 +5,67 @@
   <title>Terms & Conditions – Whis</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: { sans: ['Inter', 'system-ui', 'sans-serif'] },
+          colors: { page: '#050505', card: '#0A0A0A' }
+        }
+      }
+    }
+  </script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
   <style>
-    body { background-color: #050505; color: #cbd5e1; font-family: 'Inter', sans-serif; }
-    h1, h2 { color: white; font-weight: 600; margin-top: 2rem; margin-bottom: 1rem; }
-    p { margin-bottom: 1rem; line-height: 1.6; }
+    body { background-color: #050505; color: white; font-family: 'Inter', sans-serif; -webkit-font-smoothing: antialiased; }
     .glass-nav { background: rgba(5, 5, 5, 0.7); backdrop-filter: blur(16px); border-bottom: 1px solid rgba(255,255,255,0.05); }
+    h2 { color: white; font-weight: 600; font-size: 1.25rem; margin-top: 2.5rem; margin-bottom: 1rem; letter-spacing: -0.01em; }
+    p { color: #94a3b8; font-weight: 300; line-height: 1.75; margin-bottom: 1rem; font-size: 0.95rem; }
   </style>
 </head>
-<body>
+<body class="selection:bg-blue-500/30">
+
   <nav class="fixed top-0 w-full z-50 glass-nav h-[70px] flex items-center justify-center">
     <div class="w-full max-w-4xl px-6 flex items-center justify-between">
-      <a href="index.html" class="text-sm font-semibold text-white">whis.ai</a>
+      <a href="index.html" class="flex items-center gap-2">
+        <div class="w-6 h-6 rounded bg-white/10 flex items-center justify-center border border-white/5"><span class="text-[10px] font-bold text-white">WH</span></div>
+        <span class="text-sm font-semibold text-slate-300">whis.ai</span>
+      </a>
       <a href="index.html" class="text-xs text-slate-500 hover:text-white transition">Back to Home</a>
     </div>
   </nav>
 
-  <main class="pt-32 pb-20 px-6 max-w-4xl mx-auto">
-    <h1 class="text-4xl mb-10">Terms and Conditions</h1>
+  <main class="pt-32 pb-20 px-6 max-w-3xl mx-auto">
+    <div class="mb-12 border-b border-white/5 pb-8">
+        <h1 class="text-4xl md:text-5xl font-medium mb-4 tracking-tight">Terms of Service</h1>
+        <p class="text-slate-500 text-sm">Effective Date: November 25, 2025</p>
+    </div>
 
-    <h2>1. Acceptance of Terms</h2>
-    <p>By downloading, installing, or using the Whis application, you agree to be bound by these Terms and Conditions. If you disagree with any part of these terms, you may not use our service.</p>
+    <div class="prose prose-invert max-w-none">
+        <h2>1. Acceptance of Terms</h2>
+        <p>By downloading, installing, or using the Whis application ("Service"), you agree to be bound by these Terms. If you disagree with any part of these terms, you may not use our service.</p>
 
-    <h2>2. License</h2>
-    <p>Whis grants you a revocable, non-exclusive, non-transferable, limited license to download, install, and use the Application strictly in accordance with these Terms.</p>
+        <h2>2. License Grant</h2>
+        <p>Whis grants you a revocable, non-exclusive, non-transferable, limited license to download, install, and use the Application for your personal, non-commercial use strictly in accordance with these Terms.</p>
 
-    <h2>3. Prohibited Uses</h2>
-    <p>You agree not to use the Application for any unlawful purpose or to solicit others to perform or participate in any unlawful acts. You generally agree not to use the application to violate academic integrity policies or non-disclosure agreements.</p>
+        <h2>3. Prohibited Uses</h2>
+        <p>You agree not to use the Application for any unlawful purpose. You specifically agree not to use the application to violate academic integrity policies, cheating in examinations, or breaching non-disclosure agreements (NDAs) of third parties.</p>
 
-    <h2>4. Subscriptions and Payments</h2>
-    <p>Some parts of the Service are billed on a subscription basis ("Subscription(s)"). You will be billed in advance on a recurring and periodic basis (such as monthly or annually). Payment processing is handled by third-party gateways.</p>
+        <h2>4. Subscriptions & Billing</h2>
+        <p>Access to Pro and Stealth features requires a subscription. You will be billed in advance on a recurring basis (Monthly or Annually). You authorize us to store your payment method and to automatically charge your payment method every billing period until you cancel.</p>
 
-    <h2>5. Limitation of Liability</h2>
-    <p>In no event shall Whis, nor its directors, employees, partners, agents, suppliers, or affiliates, be liable for any indirect, incidental, special, consequential or punitive damages, including without limitation, loss of profits, data, use, goodwill, or other intangible losses.</p>
+        <h2>5. Limitation of Liability</h2>
+        <p>In no event shall Whis, nor its directors, employees, partners, agents, suppliers, or affiliates, be liable for any indirect, incidental, special, consequential or punitive damages, including without limitation, loss of profits, data, use, goodwill, or other intangible losses.</p>
 
-    <h2>6. Changes</h2>
-    <p>We reserve the right, at our sole discretion, to modify or replace these Terms at any time.</p>
-
-    <h2>7. Governing Law</h2>
-    <p>These Terms shall be governed and construed in accordance with the laws of India, without regard to its conflict of law provisions.</p>
+        <h2>6. Termination</h2>
+        <p>We may terminate or suspend your account immediately, without prior notice or liability, for any reason whatsoever, including without limitation if you breach the Terms.</p>
+        
+        <h2>7. Governing Law</h2>
+        <p>These Terms shall be governed and construed in accordance with the laws of Telangana, India, without regard to its conflict of law provisions.</p>
+    </div>
   </main>
-
-  <footer class="border-t border-white/5 py-8 text-center text-xs text-slate-600">
+  
+  <footer class="border-t border-white/5 py-12 text-center text-xs text-slate-600">
       &copy; 2025 Whis AI. All rights reserved.
   </footer>
 </body>
